
 * Verbesserte Angabe der sicheren Attribute eines Models. Siehe 
 [Absichern von Attributzuweisungen](/doc/guide/form.model#securing-attribute-assignments).

 * Veränderter Algorithmus beim Eager Loading von verbundenen Records. Alle
 Verbundtabellen werden nun standardmäßig in einer einzigen SQL-Abfrage gejoined.

 * Der verwendete Tabellen-Alias entspricht nun dem Namen der Beziehung im AR.


Version 1.0.10
--------------

 * Modulnachrichten können nun einfacher mit CPhpMessageSource übersetzt
 werden
     - [Übersetzen von Textnachrichten](/doc/guide/topics.i18n#message-translation)

 * Als Event-Handler können nun auch anonyme Funktionen verwendet werden
     - [Event](/doc/guide/basics.component#component-event)

Version 1.0.8
-------------

 * Es können nun auch mehrere gecachete Werte auf einmal abgerufen werden
	 - [Cachen von Daten](/doc/guide/caching.data)

 * Der neue Standard-RootAlias `ext` verweist auf das Verzeichnis mit allen
Erweiterungen Dritter.
	 - [Erweiterungen verwenden](/doc/guide/extension.use)

Version 1.0.7
-------------

 * Nachrichten können nun mit Informationen aus dem Aufrufstapel geloggt werden
     - [Loggen von Kontextinformationen](/doc/guide/topics.logging#logging-context-information)

 * ActiveRecord-Relationen können nun die Option `index` verwenden, um
relationale Objekte anhand den Werten einer bestimmten Spalte zu indizieren
     - [Optionen für relationale Abfragen](/doc/guide/database.arr#relational-query-options)

Version 1.0.6
-------------

 * Benannte Bereiche werden nun auch in `update`- und `delete`-Methoden unterstützt:
     - [Benannte Bereiche](/doc/guide/database.ar#named-scopes)

 * Benannte Bereiche können nun auch in der `with`-Option von Beziehungsdefinitionen verwendet werden:
     - [Relationale Abfragen mit benannten Bereichen](/doc/guide/database.arr#relational-query-with-named-scopes)

 * SQL-Anweisungen können nun ebenfalls einer Leistungsmessung unterzogen werden