@@ -16,21 +16,8 @@
  * @version $Id: $
  */
 return array (
-  0 => '0',
-  'CDbTestFixture.connectionID "{id}" is invalid. Please make sure it refers to the ID of a CDbConnection application component.' => 'CDbFixture.connectionID "{id}" ist ungültig. Bitte stellen Sie sicher, dass sie sich auf die ID einer CDbConnection-Komponente bezieht.',
-  'Column "{column} does not exist in table "{table}".' => 'Spalte "{column}" existiert nicht in Tabelle "{table}".',
-  'Extension path "{path}" does not exist.' => 'Erweiterungs-Pfad "{path}" existiert nicht.',
-  'Invalid operator "{operator}".' => 'Ungültiger Operator "{operator}".',
-  'Resetting PK sequence is not supported.' => 'Zurücksetzen des Primärschlüsselzählers wird nicht unterstützt.',
-  'Setting integrity check is not supported.' => 'Aktivieren der Integritätsprüfung wird nicht unterstützt.',
-  '{attribute} cannot accept more than {limit} files.' => '{attribute} akzeptiert nicht mehr als {limit} Dateien.',
-  '{attribute} must be either {true} or {false}.' => '{attribute} muss entweder {true} oder {false} sein.',
-  '{attribute} must be greater than "{compareValue}".' => '{attribute} muss größer als "{compareValue}" sein.',
-  '{attribute} must be greater than or equal to "{compareValue}".' => '{attribute} muss größer oder gleich "{compareValue}" sein.',
-  '{attribute} must be less than "{compareValue}".' => '{attribute} muss kleiner als "{compareValue}" sein.',
-  '{attribute} must be less than or equal to "{compareValue}".' => '{attribute} muss kleiner oder gleich "{compareValue}" sein.',
-  '{attribute} must be {value}.' => '{attribute} muss {value} sein.',
-  '{attribute} must not be equal to "{compareValue}".' => '{attribute} darf nicht gleich "{compareValue}" sein.',
+  0 => '',
+  'Virtual attribute {name} must specify "asc" and "desc" options.' => 'Virtuelles Attribut {name} muss "asc"- und "desc"-Optionen angeben.',
   '"{path}" is not a valid directory.' => '"{path}" ist kein gültiges Verzeichnis.',
   '&lt; Previous' => '&lt; Vorherige',
   '&lt;&lt; First' => '&lt;&lt; Erste',
@@ -60,6 +47,7 @@ return array (
   'CDbHttpSession.connectionID "{id}" is invalid. Please make sure it refers to the ID of a CDbConnection application component.' => 'CDbHttpSession.connectionID "{id}" ist ungültig. Bitte stellen Sie sicher, dass sie sich auf die ID einer Applikations-Komponente vom Typ CDbConnection bezieht.',
   'CDbLogRoute.connectionID "{id}" does not point to a valid CDbConnection application component.' => 'CDbLogRoute.connectionID "{id}" zeigt nicht auf eine gültige Applikations-Komponente vom Typ CDbConnection.',
   'CDbMessageSource.connectionID is invalid. Please make sure "{id}" refers to a valid database application component.' => 'CDbMessageSource.connectionID ist ungültig. Bitte stellen Sie sicher, dass sie sich auf die ID einer Applikations-Komponente vom Typ CDbConnection bezieht',
+  'CDbTestFixture.connectionID "{id}" is invalid. Please make sure it refers to the ID of a CDbConnection application component.' => 'CDbFixture.connectionID "{id}" ist ungültig. Bitte stellen Sie sicher, dass sie sich auf die ID einer CDbConnection-Komponente bezieht.',
   'CDbTransaction is inactive and cannot perform commit or roll back operations.' => 'CDbTransaction ist inaktiv und kann keine Commit- oder Rollback-Operation durchführen.',
   'CDirectoryCacheDependency.directory cannot be empty.' => 'CDirectoryCacheDependency.directory kann nicht leer sein.',
   'CEAcceleratorCache requires PHP eAccelerator extension to be loaded, enabled or compiled with the "--with-eaccelerator-shared-memory" option.' => 'CEAcceleratorCache erfordert, dass die PHP eAccelerator Erweiterung geladen und aktiviert oder mit der "--with-eaccelerator-shared-memory"-Option kompiliert wurde.',
@@ -93,12 +81,14 @@ return array (
   'Cannot add "{child}" as a child of "{parent}". A loop has been detected.' => 'Kann "{child}" nicht als Kind von "{parent}" hinzufügen. Es wurde eine Schleife entdeckt.',
   'Cannot add "{name}" as a child of itself.' => 'Kann "{name}" nicht als Kind von sich selbst hinzufügen.',
   'Cannot add an item of type "{child}" to an item of type "{parent}".' => 'Kann ein Element vom Typ "{child}" nicht als Kind zu einem Element vom Typ "{parent}" hinzufügen.',
+  'Column "{column} does not exist in table "{table}".' => 'Spalte "{column}" existiert nicht in Tabelle "{table}".',
   'Column name must be either a string or an array.' => 'Spaltenname muss entweder ein String oder ein Array sein.',
   'Either "{parent}" or "{child}" does not exist.' => 'Entweder "{parent}" oder "{child}" existiert nicht.',
   'Error: Table "{table}" does not have a primary key.' => 'Fehler: Tabelle "{table}" hat keinen Primärschlüssel.',
   'Error: Table "{table}" has a composite primary key which is not supported by crud command.' => 'Fehler: Tabelle "{table}" hat einen zusammengesetzten Primärschlüssel, was vom crud Kommando nicht unterstützt wird.',
   'Event "{class}.{event}" is attached with an invalid handler "{handler}".' => 'Ereignis "{class}.{event}" ist der ungültige Handler "{handler}" zugeordnet.',
   'Event "{class}.{event}" is not defined.' => 'Ereignis "{class}.{event} ist nicht definiert.',
+  'Extension path "{path}" does not exist.' => 'Erweiterungs-Pfad "{path}" existiert nicht.',
   'Failed to write the uploaded file "{file}" to disk.' => 'Hochgeladene Datei "{file}" konnte nicht auf die Festplatte gespeichert werden.',
   'File upload was stopped by extension.' => 'Datei-Upload wurde von einer Erweiterung angehalten.',
   'Filter "{filter}" is invalid. Controller "{class}" does have the filter method "filter{filter}".' => 'Filter "{filter}" ist ungültig. Controller "{class}" beinhaltet die Filtermethode "filter{filter}".',
@@ -107,6 +97,7 @@ return array (
   'Invalid MO file revision: {revision}.' => 'Ungültige MO-Datei-Revision: {revision}',
   'Invalid MO file: {file} (magic: {magic}).' => 'Ungültige MO-Datei: {file} (magic: {magic}).',
   'Invalid enumerable value "{value}". Please make sure it is among ({enum}).' => 'Ungültiger Enumerable-Wert "{value}". Bitte stellen Sie sicher er ist in ({enum}) enthalten.',
+  'Invalid operator "{operator}".' => 'Ungültiger Operator "{operator}".',
   'Last &gt;&gt;' => 'Letzte &gt;&gt;',
   'List data must be an array or an object implementing Traversable.' => 'List-Daten müssen ein Array sein oder ein Objekt, das das Interface Traversable implementiert.',
   'List index "{index}" is out of bound.' => 'Listenindex "{index}" ist außerhalb der Grenzen.',
@@ -122,6 +113,8 @@ return array (
   'Property "{class}.{property}" is read only.' => 'Eigenschaft "{class}.{property} kann nur gelesen werden.',
   'Queue data must be an array or an object implementing Traversable.' => 'Queue-Daten müssen ein Array sein oder ein Objekt, das das Interface Traversable implementiert.',
   'Relation "{name}" is not defined in active record class "{class}".' => 'Relation "{name}" ist in der ActiveRecord-Klasse "{class}" nicht definiert.',
+  'Resetting PK sequence is not supported.' => 'Zurücksetzen des Primärschlüsselzählers wird nicht unterstützt.',
+  'Setting integrity check is not supported.' => 'Aktivieren der Integritätsprüfung wird nicht unterstützt.',
   'Stack data must be an array or an object implementing Traversable.' => 'Stack-Daten müssen ein Array sein oder ein Objekt, das das Interface Traversable implementiert.',
   'Table "{table}" does not exist.' => 'Tabelle "{table}" existiert nicht.',
   'Table "{table}" does not have a column named "{column}".' => 'Tabelle "{table}" hat kein Feld namens "{column}".',
@@ -199,6 +192,7 @@ return array (
   'Your request is not valid.' => 'Ihre Anfrage ist ungültig.',
   '{attribute} "{value}" has already been taken.' => '{attribute} "{value}" ist bereits vergeben.',
   '{attribute} "{value}" is invalid.' => '{attribute} "{value}" ist ungültig.',
+  '{attribute} cannot accept more than {limit} files.' => '{attribute} akzeptiert nicht mehr als {limit} Dateien.',
   '{attribute} cannot be blank.' => '{attribute} kann nicht leer sein.',
   '{attribute} is invalid.' => '{attribute} ist ungültig.',
   '{attribute} is not a valid URL.' => '{attribute} ist keine gültige URL.',
@@ -211,8 +205,15 @@ return array (
   '{attribute} is too small (minimum is {min}).' => '{attribute} ist zu klein (Minimum ist {min}).',
   '{attribute} must be a number.' => '{attribute} muss eine Zahl sein.',
   '{attribute} must be an integer.' => '{attribute} muss eine ganze Zahl sein.',
+  '{attribute} must be either {true} or {false}.' => '{attribute} muss entweder {true} oder {false} sein.',
+  '{attribute} must be greater than "{compareValue}".' => '{attribute} muss größer als "{compareValue}" sein.',
+  '{attribute} must be greater than or equal to "{compareValue}".' => '{attribute} muss größer oder gleich "{compareValue}" sein.',
+  '{attribute} must be less than "{compareValue}".' => '{attribute} muss kleiner als "{compareValue}" sein.',
+  '{attribute} must be less than or equal to "{compareValue}".' => '{attribute} muss kleiner oder gleich "{compareValue}" sein.',
   '{attribute} must be repeated exactly.' => '{attribute} muss genau wiederholt werden.',
   '{attribute} must be {type}.' => '{attribute} muss {type} sein.',
+  '{attribute} must be {value}.' => '{attribute} muss {value} sein.',
+  '{attribute} must not be equal to "{compareValue}".' => '{attribute} darf nicht gleich "{compareValue}" sein.',
   '{className} does not support add() functionality.' => '{className} unterstützt die Funktionalität add() nicht.',
   '{className} does not support delete() functionality.' => '{className} unterstützt die Funktionalität delete() nicht.',
   '{className} does not support flush() functionality.' => '{className} unterstützt die Funktionalität flush() nicht.',
